--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
-    
-    <title>My App</title>
-  </head>
-  <body>
-    <noscript></noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+
+  <title>Market Cubos</title>
+</head>
+
+<body>
+  <noscript></noscript>
+  <div id="root"></div>
+</body>
+
 </html>
